fix lỗi logic + refactor sonarQube warning